# TestTask

./: CMakeLists.txt  README
include/: MultiThreadTask.h  SingleThreadTask.h  TestTask.h  TextFS.h
src/: Main.cpp  MultiThreadTask.cpp  SingleThreadTask.cpp  TextFS.cpp
